HTML file served to the client

--- a/clase-6/client/index.html
+++ b/clase-6/client/index.html
@@ -91,10 +91,10 @@
 </head>
 
 <body>
-  <section>
-    <form action="">
-      <input id="input-chat" type="text">
-      <label for="input-chat"></label>
+  <section id="chat">
+    <form id="form">
+      <input id="input" type="text" name="message" placeholder="Escribe un mensaje..." autocomplete="off">
+      <button>Enviar</button>
     </form>
   </section>
 </body>
