Added DB Turso for data persistence

--- a/clase-6/client/index.html
+++ b/clase-6/client/index.html
@@ -9,15 +9,20 @@
   <script type="module">
     import { io } from 'https://cdn.socket.io/4.7.5/socket.io.esm.min.js'
 
-    const socket = io()
+    const socket = io({
+      auth: {
+        serverOffset: 0
+      }
+    })
 
     const form = document.getElementById('form')
     const input = document.getElementById('input')
     const messages = document.getElementById('messages')
 
-    socket.on('chat message', (msg) => {
+    socket.on('chat message', (msg, serverOffset) => {
       const item = `<li>${msg}</li>`
       messages.insertAdjacentHTML('beforeend', item)
+      socket.auth.serverOffset = serverOffset
     })
 
     form.addEventListener('submit', e => {
