Added scroll behavior when receiving a new message

--- a/clase-6/client/index.html
+++ b/clase-6/client/index.html
@@ -40,6 +40,8 @@
       </li>`
       messages.insertAdjacentHTML('beforeend', item)
       socket.auth.serverOffset = serverOffset
+      // scroll to bottom of messages
+      messages.scrollTop = messages.scrollHeight
     })
 
     form.addEventListener('submit', e => {
